--- a/index.html
+++ b/index.html
@@ -81,10 +81,8 @@
       "Therefore I tell you, do not worry about your life, what you will eat or drink; or about your body, what you will wear. Is not life more than food, and the body more than clothes?'Matthew 6:25”,
       "'Do not be afraid, little flock, for your Father has been pleased to give you the kingdom.'Luke 12:32”,
       "When anxiety was great within me, your consolation brought me joy. Psalm 94:19”,
-      "Do not be anxious about anything, but in every situation, by prayer and petition, with
-      thanksgiving, present your requests to God. Philippians 4:6”,
+      "Do not be anxious about anything, but in every situation, by prayer and petition, with thanksgiving, present your requests to God. Philippians 4:6”,
       "Anxiety weighs down the heart, but a kind word cheers it up. Proverbs 12:25",
-      “Cast all your anxiety on him because he cares for you. 1 Peter 5:7”,
       "They will have no fear of bad news; their hearts are steadfast, trusting in the LORD. Psalm 112:7”,
       "Surely God is my salvation; I will trust and not be afraid. The LORD, the LORD himself, is my strength and my defense; he has become my salvation. Isaiah 12:2”,
       "God is our refuge and strength, an ever-present help in trouble. Psalm 46:1”,
@@ -107,8 +105,7 @@
       "But now, this is what the LORD says—he who created you, Jacob, he who formed you, Israel: 'Do not fear, for I have redeemed you; I have summoned you by name; you are mine. 'Isaiah 43:1”,
       "In righteousness you will be established: Tyranny will be far from you; you will have nothing to fear. Terror will be far removed; it will not come near you. Isaiah 54:14”,
       "They will be like a tree planted by the water that sends out its roots by the stream. It does not fear when heat comes; its leaves are always green. It has no worries in a year of drought and never fails to bear fruit. Jeremiah 17:8”,
-      "Who comforts us in all our troubles, so that we can comfort those in any trouble with the
-      comfort we ourselves receive from God. 2 Corinthians 1:4”,
+      "Who comforts us in all our troubles, so that we can comfort those in any trouble with the comfort we ourselves receive from God. 2 Corinthians 1:4”,
       "The LORD does not look at the things people look at. People look at the outward appearance, but the LORD looks at the heart. 1 Samuel 16:7”,
       "Charm is deceptive, and beauty is fleeting; but a woman who fears the LORD is to be praised. Proverbs 31:30”,
       "Therefore we do not lose heart. Though outwardly we are wasting away, yet inwardly we are being renewed day by day. 2 Corinthians 4:16”,
@@ -145,8 +142,7 @@
       "Though an army besiege me, my heart will not fear; though war break out against me, even then I will be confident. Psalm 27:3”,
       "Rise up; this matter is in your hands. We will support you, so take courage and do it. Ezra 10:4”,
       "No temptation has overtaken you except what is common to mankind. And God is faithful; he will not let you be tempted beyond what you can bear. But when you are tempted, he will also provide a way out so that you can endure it. 1 Corinthians 10:13”,
-      "Immediately the boy’s father exclaimed,
-      Mark 9:24”,
+      "Immediately the boy’s father exclaimed, Mark 9:24”,
       "Then he said to Thomas, 'Put your finger here; see my hands. Reach out your hand and put it into my side. Stop doubting and believe. 'John 20:27”,
       "But when you ask, you must believe and not doubt, because the one who doubts is like a wave of the sea, blown and tossed by the wind. James 1:6”,
       "Be merciful to those who doubt; Jude 1:22”,
@@ -186,7 +182,6 @@
       "so that Christ may dwell in your hearts through faith. And I pray that you, being rooted and established in love, Ephesians 3:17”,
       "Therefore God exalted him to the highest place and gave him the name that is above every name, Philippians 2:9”,
       "May the LORD, the God of your ancestors, increase you a thousand times and bless you as he has promised! Deuteronomy 1:11”,
-      "'If you can'?" said Jesus. "Everything is possible for one who believes. Mark 9:23”,
       "But you, dear friends, by building yourselves up in your most holy faith and praying in the Holy Spirit, Jude 1:20”,
       "And if Christ has not been raised, your faith is futile; you are still in your sins. 1 Corinthians 15:17”,
       "We ought always to thank God for you, brothers and sisters, and rightly so, because your faith is growing more and more, and the love all of you have for one another is increasing. 2 Thessalonians 1:3”,
@@ -195,6 +190,7 @@
       "I tell you, he will see that they get justice, and quickly. However, when the Son of Man comes, will he find faith on the earth? Luke 18:8”,
       "Yet to all who did receive him, to those who believed in his name, he gave the right to become children of God— John 1:12”,
       "He replied, 'You of little faith, why are you so afraid?' Then he got up and rebuked the winds and the waves, and it was completely calm. Matthew 8:26”
+      
 
       // Add the rest of the verses up to 500 here...
     ];
