--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       "Have no fear of sudden disaster or of the ruin that overtakes the wicked. Proverbs 31:21”,
       "The fearful heart will know and understand, and the stammering tongue will be fluent and clear. Isaiah 32:4”,
       "Say to those with fearful hearts,
-      'Be strong, do not fear; your God will come, he will come with vengeance; with divine retribution he will come to save you.’ Isaiah 35:4”,
+      "Be strong, do not fear; your God will come, he will come with vengeance; with divine retribution he will come to save you.’ Isaiah 35:4”,
       "But now, this is what the LORD says—he who created you, Jacob, he who formed you, Israel: 'Do not fear, for I have redeemed you; I have summoned you by name; you are mine. 'Isaiah 43:1”,
       "In righteousness you will be established: Tyranny will be far from you; you will have nothing to fear. Terror will be far removed; it will not come near you. Isaiah 54:14”,
       "They will be like a tree planted by the water that sends out its roots by the stream. It does not fear when heat comes; its leaves are always green. It has no worries in a year of drought and never fails to bear fruit. Jeremiah 17:8”,
