--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
       "When anxiety was great within me, your consolation brought me joy. Psalm 94:19”,
       "Do not be anxious about anything, but in every situation, by prayer and petition, with thanksgiving, present your requests to God. Philippians 4:6”,
       "Anxiety weighs down the heart, but a kind word cheers it up. Proverbs 12:25",
+      “Cast all your anxiety on him because he cares for you. 1 Peter 5:7”,
       "They will have no fear of bad news; their hearts are steadfast, trusting in the LORD. Psalm 112:7”,
       "Surely God is my salvation; I will trust and not be afraid. The LORD, the LORD himself, is my strength and my defense; he has become my salvation. Isaiah 12:2”,
       "God is our refuge and strength, an ever-present help in trouble. Psalm 46:1”,
@@ -182,6 +183,7 @@
       "so that Christ may dwell in your hearts through faith. And I pray that you, being rooted and established in love, Ephesians 3:17”,
       "Therefore God exalted him to the highest place and gave him the name that is above every name, Philippians 2:9”,
       "May the LORD, the God of your ancestors, increase you a thousand times and bless you as he has promised! Deuteronomy 1:11”,
+      "'If you can'?" said Jesus. "Everything is possible for one who believes. Mark 9:23”,
       "But you, dear friends, by building yourselves up in your most holy faith and praying in the Holy Spirit, Jude 1:20”,
       "And if Christ has not been raised, your faith is futile; you are still in your sins. 1 Corinthians 15:17”,
       "We ought always to thank God for you, brothers and sisters, and rightly so, because your faith is growing more and more, and the love all of you have for one another is increasing. 2 Thessalonians 1:3”,
@@ -190,7 +192,6 @@
       "I tell you, he will see that they get justice, and quickly. However, when the Son of Man comes, will he find faith on the earth? Luke 18:8”,
       "Yet to all who did receive him, to those who believed in his name, he gave the right to become children of God— John 1:12”,
       "He replied, 'You of little faith, why are you so afraid?' Then he got up and rebuked the winds and the waves, and it was completely calm. Matthew 8:26”
-
       // Add the rest of the verses up to 500 here...
     ];
 
