--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -128,7 +129,101 @@
       "The Lord will strengthen him on his bed of illness; You will sustain him on his sickbed. - Psalm 41:3",
       "But thanks be to God, who gives us the victory through our Lord Jesus Christ. - 1 Corinthians 15:57",
       "And let us consider one another in order to stir up love and good works. - Hebrews 10:24",
-      "Blessed are those who hunger and thirst for righteousness, For they shall be filled. - Matthew 5:6"
+      "Blessed are those who hunger and thirst for righteousness, For they shall be filled. - Matthew 5:6",
+      "Be of good courage, And He shall strengthen your heart, All you who hope in the Lord. - Psalm 31:24",
+      "When you pass through the waters, I will be with you; And through the rivers, they shall not overflow you. When you walk through the fire, you shall not be burned, Nor shall the flame scorch you. - Isaiah 43:2",
+      "But you, be strong and do not let your hands be weak, for your work shall be rewarded! - 2 Chronicles 15:7",
+      "Rejoicing in hope, patient in tribulation, continuing steadfastly in prayer. - Romans 12:12",
+      "My soul, wait silently for God alone, For my expectation is from Him. He only is my rock and my salvation; He is my defense; I shall not be moved. - Psalm 62:5-6",
+      "Only be strong and very courageous, that you may observe to do according to all the law which Moses My servant commanded you; do not turn from it to the right hand or to the left, that you may prosper wherever you go. - Joshua 1:7",
+      "That He would grant you, according to the riches of His glory, to be strengthened with might through His Spirit in the inner man. - Ephesians 3:16",
+      "Now may the God of patience and comfort grant you to be like-minded toward one another, according to Christ Jesus, that you may with one mind and one mouth glorify the God and Father of our Lord Jesus Christ. - Romans 15:5-6",
+      "It is God who arms me with strength, And makes my way perfect. - Psalm 18:32",
+      "Delight yourself also in the Lord, And He shall give you the desires of your heart. - Psalm 37:4",
+      "No weapon formed against you shall prosper, And every tongue which rises against you in judgment You shall condemn. This is the heritage of the servants of the Lord, And their righteousness is from Me,’ says the Lord. - Isaiah 54:17",
+      "Watch, stand fast in the faith, be brave, be strong. - 1 Corinthians 16:13",
+      "Do not sorrow, for the joy of the Lord is your strength. - Nehemiah 8:10",
+      "Who satisfies your mouth with good things, So that your youth is renewed like the eagle's. - Psalm 103:5",
+      "And not only that, but we also glory in tribulations, knowing that tribulation produces perseverance; and perseverance, character; and character, hope. - Romans 5:3-4",
+      "Therefore do not cast away your confidence, which has great reward. - Hebrews 10:35",
+      "God is our refuge and strength, A very present help in trouble. - Psalm 46:1",
+      "But those who wait on the Lord Shall renew their strength; They shall mount up with wings like eagles, They shall run and not be weary, They shall walk and not faint. - Isaiah 40:31",
+      "If you faint in the day of adversity, Your strength is small. - Proverbs 24:10",
+      "For with God nothing will be impossible. - Luke 1:37",
+      "Therefore we do not lose heart. Even though our outward man is perishing, yet the inward man is being renewed day by day. - 2 Corinthians 4:16",
+      "For I consider that the sufferings of this present time are not worthy to be compared with the glory which shall be revealed in us. - Romans 8:18",
+      "Blessed is the man who endures temptation; for when he has been approved, he will receive the crown of life which the Lord has promised to those who love Him. - James 1:12",
+      "Do not be wise in your own eyes; Fear the Lord and depart from evil. - Proverbs 3:7",
+      "In the multitude of my anxieties within me, Your comforts delight my soul. - Psalm 94:19",
+      "As His divine power has given to us all things that pertain to life and godliness, through the knowledge of Him who called us by glory and virtue. - 2 Peter 1:3",
+      "O God, You are more awesome than Your holy places. The God of Israel is He who gives strength and power to His people. Blessed be God! - Psalm 68:35",
+      "Yet in all these things we are more than conquerors through Him who loved us. - Romans 8:37",
+      "Take My yoke upon you and learn from Me, for I am gentle and lowly in heart, and you will find rest for your souls. - Matthew 11:29",
+      "And those who know Your name will put their trust in You; For You, Lord, have not forsaken those who seek You. - Psalm 9:10",
+      "Seek the Lord while He may be found, Call upon Him while He is near. Let the wicked forsake his way, And the unrighteous man his thoughts; Let him return to the Lord, And He will have mercy on him; And to our God, For He will abundantly pardon. - Isaiah 55:6-7",
+      "For You have armed me with strength for the battle; You have subdued under me those who rose up against me. - Psalm 18:39",
+      "And do this, knowing the time, that now it is high time to awake out of sleep; for now our salvation is nearer than when we first believed. - Romans 13:11",
+      "Commit your works to the Lord, And your thoughts will be established. - Proverbs 16:3",
+      "Enlarge the place of your tent, And let them stretch out the curtains of your dwellings; Do not spare; Lengthen your cords, And strengthen your stakes. - Isaiah 54:2",
+      "The Lord is my strength and song, And He has become my salvation. - Psalm 118:14",
+      "Therefore do not worry about tomorrow, for tomorrow will worry about its own things. Sufficient for the day is its own trouble. - Matthew 6:34",
+      "For the mountains may depart And the hills be removed, But My kindness shall not depart from you, Nor shall My covenant of peace be removed,” Says the Lord, who has mercy on you. - Isaiah 54:10",
+      "He who calls you is faithful, who also will do it. - 1 Thessalonians 5:24",
+      "But the Lord is faithful, who will establish you and guard you from the evil one. - 2 Thessalonians 3:3",
+      "You will keep him in perfect peace, Whose mind is stayed on You, Because he trusts in You. - Isaiah 26:3",
+      "And my God shall supply all your need according to His riches in glory by Christ Jesus. - Philippians 4:19",
+      "And let us not grow weary while doing good, for in due season we shall reap if we do not lose heart. - Galatians 6:9",
+      "The steps of a good man are ordered by the Lord, And He delights in his way. - Psalm 37:23",
+      "For the Lord God is a sun and shield; The Lord will give grace and glory; No good thing will He withhold From those who walk uprightly. - Psalm 84:11",
+      "But those who hope in the Lord Will renew their strength; They will soar on wings like eagles; They will run and not grow weary, They will walk and not be faint. - Isaiah 40:31",
+      "The righteous cry out, and the Lord hears, And delivers them out of all their troubles. - Psalm 34:17",
+      "The Lord is near to those who have a broken heart, And saves such as have a contrite spirit. - Psalm 34:18",
+      "For the eyes of the Lord are on the righteous, And His ears are open to their cry. - 1 Peter 3:12",
+      "I sought the Lord, and He heard me, And delivered me from all my fears. - Psalm 34:4",
+      "For He shall give His angels charge over you, To keep you in all your ways. - Psalm 91:11",
+      "The Lord will fight for you, and you shall hold your peace. - Exodus 14:14",
+      "The Lord is my strength and my shield; My heart trusted in Him, and I am helped; Therefore my heart greatly rejoices, And with my song I will praise Him. - Psalm 28:7",
+      "For You, O Lord, will bless the righteous; With favor You will surround him as with a shield. - Psalm 5:12",
+      "Fear not, for I am with you; Be not dismayed, for I am your God. I will strengthen you, Yes, I will help you, I will uphold you with My righteous right hand. - Isaiah 41:10",
+      "Therefore, my beloved brethren, be steadfast, immovable, always abounding in the work of the Lord, knowing that your labor is not in vain in the Lord. - 1 Corinthians 15:58",
+      "The Lord is good, A stronghold in the day of trouble; And He knows those who trust in Him. - Nahum 1:7",
+      "Commit your works to the Lord, And your thoughts will be established. - Proverbs 16:3",
+      "For we walk by faith, not by sight. - 2 Corinthians 5:7",
+      "Cast all your care upon Him, for He cares for you. - 1 Peter 5:7",
+      "But the fruit of the Spirit is love, joy, peace, longsuffering, kindness, goodness, faithfulness, gentleness, self-control. Against such there is no law. - Galatians 5:22-23",
+      "Let all that you do be done with love. - 1 Corinthians 16:14",
+      "The Lord will give strength to His people; The Lord will bless His people with peace. - Psalm 29:11",
+      "And let the peace of God rule in your hearts, to which also you were called in one body; and be thankful. - Colossians 3:15",
+      "The Lord is my refuge and my fortress; My God, in Him I will trust. - Psalm 91:2",
+      "For the mountains may depart And the hills be removed, But My kindness shall not depart from you, Nor shall My covenant of peace be removed,” Says the Lord, who has mercy on you. - Isaiah 54:10",
+      "But those who wait on the Lord Shall renew their strength; They shall mount up with wings like eagles; They shall run and not be weary, They shall walk and not faint. - Isaiah 40:31",
+      "The steps of a good man are ordered by the Lord, And He delights in his way. - Psalm 37:23",
+      "A merry heart does good, like medicine, But a broken spirit dries the bones. - Proverbs 17:22",
+      "And this is the confidence that we have in Him, that if we ask anything according to His will, He hears us. - 1 John 5:14",
+      "Be anxious for nothing, but in everything by prayer and supplication, with thanksgiving, let your requests be made known to God; and the peace of God, which surpasses all understanding, will guard your hearts and minds through Christ Jesus. - Philippians 4:6-7",
+      "So then, faith comes by hearing, and hearing by the word of God. - Romans 10:17",
+      "The Lord has appeared of old to me, saying: ‘Yes, I have loved you with an everlasting love; Therefore with lovingkindness I have drawn you. - Jeremiah 31:3",
+      "The Lord is my helper; I will not fear. What can man do to me? - Hebrews 13:6",
+      "Let your light so shine before men, that they may see your good works and glorify your Father in heaven. - Matthew 5:16",
+      "You are my hiding place; You shall preserve me from trouble; You shall surround me with songs of deliverance. - Psalm 32:7",
+      "The Lord will guide you continually, And satisfy your soul in drought, And strengthen your bones; You shall be like a watered garden, And like a spring of water, whose waters do not fail. - Isaiah 58:11",
+      "God is our refuge and strength, A very present help in trouble. - Psalm 46:1",
+      "But the Lord stood with me and strengthened me, so that the message might be preached fully through me, and that all the Gentiles might hear. Also I was delivered out of the mouth of the lion. - 2 Timothy 4:17",
+      "For the grace of God that brings salvation has appeared to all men, teaching us that, denying ungodliness and worldly lusts, we should live soberly, righteously, and godly in the present age. - Titus 2:11-12",
+      "For we do not wrestle against flesh and blood, but against principalities, against powers, against the rulers of the darkness of this age, against spiritual hosts of wickedness in the heavenly places. - Ephesians 6:12",
+      "Therefore take up the whole armor of God, that you may be able to withstand in the evil day, and having done all, to stand. - Ephesians 6:13",
+      "In all your ways acknowledge Him, And He shall direct your paths. - Proverbs 3:6",
+      "And we know that all things work together for good to those who love God, to those who are the called according to His purpose. - Romans 8:28",
+      "Do not be overcome by evil, but overcome evil with good. - Romans 12:21",
+      "Therefore, if anyone is in Christ, he is a new creation; old things have passed away; behold, all things have become new. - 2 Corinthians 5:17",
+      "The Lord is my strength and my song; He has become my salvation. - Exodus 15:2",
+      "For God is not unjust to forget your work and labor of love which you have shown toward His name, in that you have ministered to the saints and do minister. - Hebrews 6:10",
+      "The Lord is a refuge for the oppressed, A stronghold in times of trouble. - Psalm 9:9",
+      "For He will command His angels concerning you to guard you in all your ways. - Psalm 91:11",
+      "You will keep him in perfect peace, Whose mind is stayed on You, Because he trusts in You. - Isaiah 26:3",
+      "The Lord has sworn that He will not relent: ‘You are a priest forever According to the order of Melchizedek.’ - Psalm 110:4",
+      "Let us run with endurance the race that is set before us, looking unto Jesus, the author and finisher of our faith. - Hebrews 12:1-2",
+      "The Lord is my light and my salvation; Whom shall I fear? The Lord is the strength of my life; Of whom shall I be afraid? - Psalm 27:1"
     ];
 
     function getRandomVerse() {
